<resources>
    <string name="app_name">Homework03</string>
    <string name="btnStartQuizText">Start Quiz</string>
    <string name="lblQuizResultText">Quiz Result:</string>
    <string name="empty"> </string>
    <string name="lblRestartQuizText">Try Again</string>
    <string name="lblExitText">Quit</string>
    <string name="txtLoadingMessage">Loading Questions</string>
    <string name="txtLoadingQuestion">How Geeky Are You?</string>
    <string name="lblNext">Next</string>
    <string name="blankAnswerErrorMessage">Please select an answer!</string>

    <string name="nonGeek">  NON GEEK</string>
    <string name="semiGeek">  SEMI GEEK</string>
    <string name="uberGeek">  UBER GEEK</string>

    <string name="nonGeekDescription">There isn\'t a single geeky bone in you body. You prefer to party rather than study, and have someone else fix your computer, if need be. You\'re just too cool for this. You probably don\'t even wear glasses!</string>
    <string name="semiGeekDescription">Maybe you\'re just influenced by the trend, or maybe you just got it all perfectly balanced. You have some geeky traits, but they aren\'t as "hardcore" and they don\'t take over your life. You like some geeky things, but aren\'t nearly as obsessive about them as the uber-geeks. You actually get to enjoy both worlds </string>
    <string name="uberGeekDescription">You are the geek supreme! You are likely to be interested in technology, science, gaming and geeky media such as Sci-Fi and fantasy. All the mean kids that used to laugh at you in high school are now begging you for a job. Be proud of your geeky nature, for geeks shall inherit the Earth! </string>

</resources>
