<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.baocin.homework03.Quiz">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/empty"
        android:id="@+id/lblQuestionNumber"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:id="@+id/imgQuestionImage"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/lblQuestionNumber" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/txtDescription"
        android:text="@string/empty"
        android:layout_below="@+id/imgQuestionImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="@dimen/abc_text_size_medium_material" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/rdgChoices"
        android:layout_below="@+id/txtDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout3">

    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout3">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblExitText"
            android:id="@+id/btnQuit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_weight="1"
            android:layout_marginRight="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblNext"
            android:id="@+id/btnNext"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentStart="false"
            android:layout_weight="1" />

    </LinearLayout>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pbLoadingBar"
        android:layout_above="@+id/txtDescription"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
